sfa_dash/static/css/styles.css
/* ... */
.report-metadata-popup ul.data-metadata-fields {
  padding-left: 0.5em;
}

.reports-table-row:nth-child(n+3) {
  width: fit-content;
}

div.report-header {
  padding-bottom: 0.5rem;
  margin-bottom: 1rem;
  border-bottom: 1px solid #dee2e6;
}

.extra-params-wrapper pre {
  background-color: #eee;
  border: 1px solid #aaa;
  padding: 0.5em;
}

.error-band-container,
.cost-definition {
  border: 1px solid #dee2e6;
  padding: 0.5em;
  position: relative;
}

.primary-cost-container label {
  padding: 0 5px;
}

.primary-cost-container a[role=button] {
  margin: 0.25em 0;
}

.primary-cost-container a[role=button].help-button {
  margin-left: 0.25em;
}

.account-menu {
  width: 300px;
  left: calc(-300px + 100%);
}

a#ref-clear {
  color: #007bff;
}

.iebanner {
  padding: 1em;
  text-align: center;
}

input.datetime-field {
  font-family: monospace;
}

.datetime-container {
  border: 1px solid #ccc;
  width: fit-content;
  padding: 5px;
  display: inline;
}
.datetime-field.year {
  width: 3em;
}
.datetime-field {
  width: 1.5em;
  border: 0;
  text-align: right;
}
span.date-fields,
span.time-fields {
  display: inline-block;
}
span.date-field-wrapper:not(:last-child)::after {
  content: "-";
}
span.time-field-wrapper:first-child::after {
  content: ":";
}
/* Remove adjustment up/down arrows from number fields */
input.datetime-field::-webkit-outer-spin-button,
input.datetime-field::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input[type="number"].datetime-field {
  -moz-appearance: textfield;
}
.datetime-component {
  margin-top: 0.5em;
}
.datetime-field-container {
  display: inline-block;
  min-width: 49%;
}

#quality-flag-container {
    padding: 1em;
}

table.report-form-quality-flag-table td,
table.report-form-quality-flag-table th{
    padding: 0;
}

table.report-form-quality-flag-table tr td:first-child,
table.report-form-quality-flag-table tr th:first-child {
    width: 2em;
}

table.report-form-quality-flag-table tr td:nth-child(3), 
table.report-form-quality-flag-table tr th:nth-child(3) {
    text-align: center;
}

